# AdvancedOOP

./: Submission.ra  Submission.rar
GameAlgo3/: 5x25x30-30_ships-2.sboard  Board.cpp  Board.h  BoardChecker.cpp  BoardChecker.h  GameAlgo3.sln  SingleGameManager.cpp  SingleGameManager.h  Smart3DPlayer.h  Tournament Manager.vcxproj.filters  TournamentManager.cpp  TournamentManager.h  Types.cpp  Types.h  Utils.cpp  Utils.h  build.bat
GameAlgo3/Common/: Common.vcxproj  Common.vcxproj.filters  IBattleshipGameAlgo.h  Types.cpp  Types.h
GameAlgo3/SingleGameManager/: SingleGameManager.h  SingleGameManager.vcxproj  SingleGameManager.vcxproj.filters
GameAlgo3/SmartAlgo/: Board.h  Smart3DPlayer.cpp  Smart3DPlayer.h  SmartAlgo.vcxproj  SmartAlgo.vcxproj.filters  main.h
GameAlgo3/Tournament Manager/: 5x25x30-30_ships-1.sboard  5x25x30-30_ships-3.sboard  5x25x30-30_ships-4.sboard  5x25x30-30_ships-5.sboard  Board.cpp  BoardChecker.cpp  BoardChecker.h  SingleGameManager.cpp  SingleGameManager.h  TounamentManager.cpp  Tournament Manager.vcxproj  Tournament Manager.vcxproj.filters  TournamentManager.cpp  TournamentManager.h  (+5 more)
Project1/: Ex1.sln  utils.h
Project1/Project1/: Board.cpp  Board.h  BoardChecker.cpp  BoardChecker.h  CMakeLists.txt  CommonAlgo.cpp  CommonAlgo.h  Game.cpp  Game.h  IBattleshipGameAlgo.h  NaiiveAlgo.cpp  NaiiveAlgo.h  PreMovesAlgo.cpp  PreMovesAlgo.h  Project1.vcxproj  Project1.vcxproj.filters  SmartAlgo.cpp  SmartAlgo.h  Tests.cpp  Tests.h  Types.cpp  Types.h  board.sboard  clean_movesA.attack  ex1.cpp  ex1.h  ex2.cpp  file_names.txt  good_board_0.sboard  stdafx.h  students.txt  utils.cpp  utils.h
Project1/Project1/TestFiles/Moves/: dirty_but_legal_movesA.attack-a  dirty_ilegal_movesA.attack-a
Project1/Project1/TestFiles/folder 1/: board.sboard  moves.attack-a
Project1/Project1/folder/: bad_board_0.sboardr  bad_board_2.sboard  clean_movesB.attack-b
Submission/: Board.cpp  Board.h  CMakeLists.txt  SingleGameManager.cpp  Smart3DPlayer.cpp  Smart3DPlayer.h  TournamentManager.cpp  TournamentManager.h  Types.h  Utils.cpp  Utils.h  build.bat  clear.bat  main.h  run.bat
Submission/build64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ex3.shlomizabari.smart.vcxproj  ex3.shlomizabari.smart.vcxproj.filters  ex3.shlomizabari.vcxproj  ex3.shlomizabari.vcxproj.filters
Test_sol/: Test_sol.sln
(+15 files in other folders)
